objects/Source_System__c.object
<CustomObject>
    <description>The Source System object stores all the information and documentation known/captured for a specific version of a healthcare information technology system from which ABC BI products consume data.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology &amp; PACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document/Forms Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED/Operating Room/Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Medical Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Decision Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Information Management (HIM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology &amp; PACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Cycle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemedicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilization Review/Risk Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_File_Data_Fees__c</fullName>
        <label>Claim File Data Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_File_Extension__c</fullName>
        <label>Claim File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_File_Format__c</fullName>
        <label>Claim File Format</label>
        <picklist>
            <picklistValues>
                <fullName>837</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_File_Generation__c</fullName>
        <label>Claim File Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_File_Path__c</fullName>
        <label>Claim File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_File_Version__c</fullName>
        <label>Claim File Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrections_Scheme__c</fullName>
        <inlineHelpText>Select which scheme the PMIS uses for managing corrections.</inlineHelpText>
        <label>Corrections Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>2-Liner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Liner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Architecture__c</fullName>
        <label>Deployment Architecture</label>
        <picklist>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_c__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Program</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created as part of CR-3891</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Schema__c</fullName>
        <inlineHelpText>Select the number of tables used to store transactions within the PMIS schema</inlineHelpText>
        <label>Transaction Schema</label>
        <picklist>
            <picklistValues>
                <fullName>Single Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three+ Tables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that owns/supports this Source System.</description>
        <inlineHelpText>Select the Vendor that owns and supports this Source System.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Source Systems</relationshipLabel>
        <relationshipName>Source_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <label>Source System</label>
    <nameField>
        <label>Source System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Systems</pluralLabel>
    <recordTypes>
        <fullName>Source_System</fullName>
        <active>true</active>
        <label>Source System</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>